<resources>
    <string name="app_name">Text Tossing</string>
    <string name="name_display">Name</string>
    <string name="name_input">Right here!</string>
    <string name="button_confirm">Confirm</string>
    <string name="graduating_class">Class</string>
    <string name="favorite_monkey">Favorite Monkey</string>
    <string name="save_current">Save Current to Presets!</string>
    <string name="cycle">Cycle through presets!</string>
    <string-array name="names">
        <item>Gabriel</item>
        <item>Ignacio</item>
        <item>Mr. Tra</item>
        <item>Socks</item>
        <item>Nicholas J. Rising</item>
    </string-array>
    <string-array name="classes">
        <item>2022</item>
        <item>2022</item>
        <item>2012</item>
        <item>2036</item>
        <item>2022</item>
    </string-array>
    <string-array name="monkeys">
        <item>Harambe</item>
        <item>Gibbon</item>
        <item>The one with the orange behind</item>
        <item>Proboscis Monkey</item>
        <item>Curious George</item>
    </string-array>
</resources>